# glazeid

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: config.sample.yaml
src/: client.rs  config.rs  ipc.rs  macos_surface.rs  main.rs  renderer.rs  sys_tray.rs
