[package]
name = "glazeid"
version = "0.4.1"
edition = "2021"
description = "A minimal workspace bar for GlazeWM"
license = "Apache-2.0"
repository = "https://github.com/shivajreddy/glazeid"
homepage = "https://github.com/shivajreddy/glazeid"
keywords = ["glazewm", "workspace", "bar", "tiling", "windows"]
categories = ["gui"]

[[bin]]
name = "glazeid"
path = "src/main.rs"

[dependencies]
# Windowing and rendering
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"

# Font rasterization (pure Rust, no system font dep needed for embedded font)
fontdue = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System tray
tray-icon = "0.21"
image = { version = "0.25", default-features = false, features = ["png"] }

# Utilities
uuid = { version = "1", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
dirs = "5"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
